[IRGen] Look through non-ObjC protocols in emitting ObjC metadata

Fixes: https://bugs.swift.org/browse/SR-3882
Fixes: rdar://problem/24453316